// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/NamedValue.proto";
import "../ccsds_mal/TIME.proto";


package lifeCycle.protobuf;

message LifeCycle {
extensions 3 to 103;

  repeated ccsds_mal.protobuf.NamedValue launchingParameters = 1;
  optional ccsds_mal.protobuf.TIME launchingTime = 2;
}
